--- a/notebooks/bloom_exploration.ipynb
+++ b/notebooks/bloom_exploration.ipynb
@@ -2,6 +2,117 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from transformers import AutoTokenizer, AutoModel\n",
+    "import transformers\n",
+    "from transformers import BloomForCausalLM\n",
+    "from transformers import BloomTokenizerFast\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tokenizer = AutoTokenizer.from_pretrained(\"bigscience/bloom-560m\")\n",
+    "# model = AutoModel.from_pretrained(\"bigscience/bloom-560m\")\n",
+    "\n",
+    "model = BloomForCausalLM.from_pretrained(\"bigscience/bloom-1b7\")\n",
+    "tokenizer = BloomTokenizerFast.from_pretrained(\"bigscience/bloom-1b7\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# prompt = \"The tree has yellow flowers and green leaves.\"\n",
+    "prompt = \"It was a dark and stormy night\"\n",
+    "# result_length calibrates the size of the response (in tokens) we get for the prompt from the model\n",
+    "result_length = 50\n",
+    "inputs = tokenizer(prompt, return_tensors=\"pt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It was a dark and stormy night, and the wind was blowing hard. The\n",
+      "snow was falling fast, and the ground was covered with it. The\n",
+      "horses were all frozen to the ground, and the men were huddled\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Greedy Search\n",
+    "print(tokenizer.decode(model.generate(inputs[\"input_ids\"], \n",
+    "                       max_length=result_length\n",
+    "                      )[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It was a dark and stormy night, and the wind was blowing hard. I was in the\n",
+      "middle of the road, when I heard a loud crash. It came from the house\n",
+      "at the other side of my road. A man was\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Beam Search\n",
+    "print(tokenizer.decode(model.generate(inputs[\"input_ids\"],\n",
+    "                       max_length=result_length, \n",
+    "                       num_beams=2, \n",
+    "                       no_repeat_ngram_size=2,\n",
+    "                       early_stopping=True\n",
+    "                      )[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It was a dark and stormy night, and the wind was blowing hard, and the\n",
+      "light came in only by the opening of the gate, but I could hear the\n",
+      "tinkling of the swords and the cries of the wild be\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sampling Top-k + Top-p\n",
+    "print(tokenizer.decode(model.generate(inputs[\"input_ids\"],\n",
+    "                       max_length=result_length, \n",
+    "                       do_sample=True, \n",
+    "                       top_k=50, \n",
+    "                       top_p=0.9\n",
+    "                      )[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -9,10 +120,29 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "deeplearning",
+   "language": "python",
+   "name": "deeplearning"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.4"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
