--- a/notebooks/reports/plantdata_topk_sents_advanced.ipynb
+++ b/notebooks/reports/plantdata_topk_sents_advanced.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
     "    ],\n",
     "    'Flower Colour':\n",
     "    [\n",
-    "        'Flower colour', 'Flower color', 'White', 'Pink', 'Red', 'Yellow', 'Green'\n",
+    "        'Flower colour', 'Flower color'\n",
     "    ],\n",
     "    'Flower Shape':\n",
     "    [\n",
@@ -223,14 +223,17 @@
     "    ],\n",
     "    'Seed':\n",
     "    [\n",
-    "        'Seed'\n",
+    "        'Seed', \n",
     "    ]\n",
     "}\n",
     "\n",
     "with open('../../data/supportive/traits_Pierre_and_Andrei.json', 'w') as f:\n",
     "    json.dump(traits, f)\n",
     "with open('../../data/supportive/colour_list.json', 'w') as f:\n",
-    "    json.dump(colors, f)"
+    "    json.dump(colors, f)\n",
+    "\n",
+    "traits_list = list(traits.keys())\n",
+    "traits_list += [trait for lst in list(traits.values()) for trait in lst]"
    ]
   },
   {
@@ -339,43 +342,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part of Pierre"
+    "## Retokize the Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Life Form']"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "corresponding_keys('Tree', traits)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Init empty dict for retok\n",
+    "species_datalist = collections.defaultdict(list)\n",
+    "\n",
     "root = \"../../data/processed/\"\n",
     "file_name = root + 'Triples_Pierre.txt'\n",
     "\n",
     "with open(file_name) as f:\n",
-    "   data = json.load(f)\n",
+    "   json_data = json.load(f)\n",
     "\n",
-    "# species = list(data.keys())\n",
-    "species = df_Pierre.xs('species', level=1, axis=1)['Species'].values"
+    "for idx, (k, lst) in enumerate(json_data.items()):\n",
+    "    for l in lst:\n",
+    "\n",
+    "        # Flatten list of lists\n",
+    "        flat_list = [item for sublist in l for item in sublist]\n",
+    "        # Retokens some sentence with multiple 'species'\n",
+    "        flat_list_multiple_sents = [list(v) for k, v in groupby(flat_list, lambda x: x != 'species') if k]\n",
+    "        \n",
+    "        for sentence in flat_list_multiple_sents:\n",
+    "            # Insert species\n",
+    "            sentence.insert(0, 'species')\n",
+    "            species_datalist[k].append(sentence)\n",
+    "\n",
+    "file_name = root + 'Triples_Andrei.txt'\n",
+    "\n",
+    "with open(file_name) as f:\n",
+    "   json_data = json.load(f)\n",
+    "\n",
+    "for idx, (k, lst) in enumerate(json_data.items()):\n",
+    "    for l in lst:\n",
+    "\n",
+    "        # Flatten list of lists\n",
+    "        flat_list = [item for sublist in l for item in sublist]\n",
+    "        # Retokens some sentence with multiple 'species'\n",
+    "        flat_list_multiple_sents = [list(v) for k, v in groupby(flat_list, lambda x: x != 'species') if k]\n",
+    "        \n",
+    "        for sentence in flat_list_multiple_sents:\n",
+    "            # Insert species\n",
+    "            sentence.insert(0, 'species')\n",
+    "            species_datalist[k].append(sentence)\n"
    ]
   }
  ],
