--- a/notebooks/reports/plantdata_topk_sents_simple.ipynb
+++ b/notebooks/reports/plantdata_topk_sents_simple.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1994,7 +1994,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.4 (main, Mar 31 2022, 03:38:35) [Clang 12.0.0 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
