--- a/notebooks/reports/plantdata_topk_sents_triples_advanced_v1.1.ipynb
+++ b/notebooks/reports/plantdata_topk_sents_triples_advanced_v1.1.ipynb
@@ -865,9 +865,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "deeplearning",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "deeplearning"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -879,7 +879,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4 (main, Mar 31 2022, 03:38:35) [Clang 12.0.0 ]"
+   "version": "3.9.13 (main, May 24 2022, 21:28:31) \n[Clang 13.1.6 (clang-1316.0.21.2)]"
   },
   "orig_nbformat": 4,
   "vscode": {
