--- a/notebooks/reports/OpenAI/1_urls_google.ipynb
+++ b/notebooks/reports/OpenAI/1_urls_google.ipynb
@@ -63,39 +63,135 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4dc7bc7e",
+   "id": "2419e4aa",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 40/40 [00:18<00:00,  2.14it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "folder = \"../../../data/OpenAI/Species/\"\n",
-    "\n",
-    "palm_species = pickle.load(open(F\"{folder}palm_species.pkl\", 'rb'))\n",
-    "palm_species_random_50 = random.sample(palm_species, 40)\n",
-    "\n",
-    "palm_species_urls = collections.defaultdict(list)\n",
-    "palm_species_google = collections.defaultdict(list)\n",
-    "\n",
-    "for palm in tqdm(palm_species_random_50):\n",
-    "    # Search results (10 per search)\n",
-    "    search_results = google_search(palm, api_key=api_key, cse_id=cse_id)\n",
-    "    # Google Urls\n",
-    "    palm_species_google[palm] = search_results\n",
-    "    # Just the links\n",
-    "    for result in search_results:\n",
-    "        palm_species_urls[palm].append(result['link'])\n"
+    "queries = [\n",
+    "    \"\",\n",
+    "    \"description\",\n",
+    "    \"diagnosis\",\n",
+    "    \"attributes\"\n",
+    "]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "f51b72e9",
+   "metadata": {},
+   "source": [
+    "## PALMS"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "c7c4a968",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "folder = \"../../../data/OpenAI/Species/\"\n",
+    "\n",
+    "palm_species = pickle.load(open(F\"{folder}palm_species.pkl\", 'rb'))\n",
+    "# palm_species_random = random.sample(palm_species, 50)\n",
+    "\n",
+    "\n",
+    "try:\n",
+    "    folder = \"../../../data/OpenAI/Urls/\"\n",
+    "    palm_species_google = pickle.load(open(F\"{folder}google_urls_palms.pkl\", 'rb'))\n",
+    "    palm_species_urls = pickle.load(open(F\"{folder}urls_palms.pkl\", 'rb'))\n",
+    "    palms_done = list(palm_species_urls.keys())\n",
+    "except:\n",
+    "    palm_species_urls = collections.defaultdict(list)\n",
+    "    palm_species_google = collections.defaultdict(list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a57025eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Ptychosperma halmaherense',\n",
+       " 'Geonoma brenesii',\n",
+       " 'Geonoma deneversii',\n",
+       " 'Acanthophoenix crinita',\n",
+       " 'Acanthophoenix rousselii',\n",
+       " 'Acanthophoenix rubra',\n",
+       " 'Acoelorrhaphe wrightii',\n",
+       " 'Acrocomia aculeata',\n",
+       " 'Acrocomia crispa',\n",
+       " 'Acrocomia emensis',\n",
+       " 'Acrocomia glaucescens',\n",
+       " 'Acrocomia hassleri',\n",
+       " 'Acrocomia intumescens',\n",
+       " 'Acrocomia media',\n",
+       " 'Acrocomia totai',\n",
+       " 'Actinokentia divaricata',\n",
+       " 'Actinokentia huerlimannii',\n",
+       " 'Actinorhytis calapparia',\n",
+       " 'Adonidia maturbongsii',\n",
+       " 'Adonidia merrillii',\n",
+       " 'Aiphanes acanthophylla',\n",
+       " 'Aiphanes acaulis',\n",
+       " 'Aiphanes bicornis',\n",
+       " 'Aiphanes buenaventurae',\n",
+       " 'Aiphanes chiribogensis',\n",
+       " 'Aiphanes deltoidea']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "palms_done"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4dc7bc7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for palm in tqdm(palm_species):\n",
+    "\n",
+    "    if palm in palms_done:\n",
+    "        print(palm, \"done\")\n",
+    "        continue\n",
+    "\n",
+    "    for query in queries:\n",
+    "        search_query = F\"{palm} {query}\"\n",
+    "\n",
+    "        # print(search_query)\n",
+    "\n",
+    "        # Search results (10 per search)\n",
+    "        search_results = google_search(search_query, api_key=api_key, cse_id=cse_id)\n",
+    "        # Google Urls\n",
+    "        palm_species_google[palm] = search_results\n",
+    "        # Just the links\n",
+    "        for result in search_results:\n",
+    "            palm_species_urls[palm].append(result['link'])\n",
+    "\n",
+    "\n",
+    "folder = \"../../../data/OpenAI/Urls/\"\n",
+    "\n",
+    "with open(F\"{folder}urls_palms.pkl\", 'wb') as f:\n",
+    "    pickle.dump(palm_species_urls, f)\n",
+    "\n",
+    "with open(F\"{folder}google_urls_palms.pkl\", 'wb') as f:\n",
+    "    pickle.dump(palm_species_google, f)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "aa406d42",
    "metadata": {},
    "outputs": [],
@@ -106,57 +202,134 @@
     "    pickle.dump(palm_species_urls, f)\n",
     "\n",
     "with open(F\"{folder}google_urls_palms.pkl\", 'wb') as f:\n",
-    "    pickle.dump(palm_species_google, f)"
+    "    pickle.dump(palm_species_google, f)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "e8b83347",
+   "metadata": {},
+   "source": [
+    "## CARIBBEAN"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "47b9d768",
+   "execution_count": 13,
+   "id": "bd47a182",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_google = pickle.load(open(F\"{folder}google_urls_palms.pkl\", 'rb'))\n",
-    "test_urls = pickle.load(open(F\"{folder}urls_palms.pkl\", 'rb'))"
+    "folder = \"../../../data/OpenAI/Species/\"\n",
+    "\n",
+    "caribbean_species = pickle.load(open(F\"{folder}caribbean_species.pkl\", 'rb'))\n",
+    "\n",
+    "try:\n",
+    "    folder = \"../../../data/OpenAI/Urls/\"\n",
+    "    caribbeanm_species_google = pickle.load(open(F\"{folder}google_urls_caribbean.pkl\", 'rb'))\n",
+    "    caribbean_species_urls = pickle.load(open(F\"{folder}urls_caribbean.pkl\", 'rb'))\n",
+    "    caribbean_done = list(caribbean_species_urls.keys())\n",
+    "except:\n",
+    "    caribbean_species_urls = collections.defaultdict(list)\n",
+    "    caribbean_species_google = collections.defaultdict(list)\n",
+    "    caribbean_done = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "249c4d15",
+   "execution_count": 14,
+   "id": "94d9c572",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['https://www.palmpedia.net/wiki/Copernicia_cowellii',\n",
-       " 'https://www.rarepalmseeds.com/copernicia-cowellii',\n",
-       " 'https://www.palmtalk.org/forum/topic/25219-copernicia-cowellii/',\n",
-       " 'https://www.facebook.com/1235550999909816/posts/copernicia-cowellii-is-the-smallest-of-all-the-copernicias-reaching-maturity-at-/1347914132006835/',\n",
-       " 'https://www.monaconatureencyclopedia.com/copernicia-cowellii/?lang=en',\n",
-       " 'https://en.wikipedia.org/wiki/Copernicia_cowellii',\n",
-       " 'https://tropicationplants.com/products/copernicia-cowellii',\n",
-       " 'http://www.pacsoa.org.au/wiki/Copernicia_cowellii',\n",
-       " 'https://tropical.theferns.info/viewtropical.php?id=Copernicia+cowellii',\n",
-       " 'https://www1.biologie.uni-hamburg.de/b-online/library/palms/copernicia_cowellii.htm']"
+       "[]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test_urls['Copernicia cowellii']"
+    "caribbean_done"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a4e1774e",
+   "execution_count": 15,
+   "id": "e623a880",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 62%|██████▏   | 26/42 [00:45<00:28,  1.77s/it]\n"
+     ]
+    },
+    {
+     "ename": "HttpError",
+     "evalue": "<HttpError 429 when requesting https://customsearch.googleapis.com/customsearch/v1?q=Trichilia+trifolia+diagnosis&cx=13a87041f5a6df559&key=AIzaSyAiKMet5uvNWBKxmPC3OurJRs2amYdJaFA&alt=json returned \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\". Details: \"[{'message': \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\", 'domain': 'global', 'reason': 'rateLimitExceeded'}]\">",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mHttpError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[15], line 13\u001b[0m\n\u001b[1;32m      8\u001b[0m search_query \u001b[39m=\u001b[39m \u001b[39mF\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mcaribbean\u001b[39m}\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m{\u001b[39;00mquery\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[1;32m     10\u001b[0m \u001b[39m# print(search_query)\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \n\u001b[1;32m     12\u001b[0m \u001b[39m# Search results (10 per search)\u001b[39;00m\n\u001b[0;32m---> 13\u001b[0m search_results \u001b[39m=\u001b[39m google_search(search_query, api_key\u001b[39m=\u001b[39;49mapi_key, cse_id\u001b[39m=\u001b[39;49mcse_id)\n\u001b[1;32m     14\u001b[0m \u001b[39m# Google Urls\u001b[39;00m\n\u001b[1;32m     15\u001b[0m caribbean_species_google[caribbean] \u001b[39m=\u001b[39m search_results\n",
+      "Cell \u001b[0;32mIn[3], line 9\u001b[0m, in \u001b[0;36mgoogle_search\u001b[0;34m(search_term, api_key, cse_id, **kwargs)\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39mCreates a search link for the custom Google search.\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m      8\u001b[0m service \u001b[39m=\u001b[39m build(\u001b[39m\"\u001b[39m\u001b[39mcustomsearch\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mv1\u001b[39m\u001b[39m\"\u001b[39m, developerKey\u001b[39m=\u001b[39mapi_key)\n\u001b[0;32m----> 9\u001b[0m res \u001b[39m=\u001b[39m service\u001b[39m.\u001b[39;49mcse()\u001b[39m.\u001b[39;49mlist(q\u001b[39m=\u001b[39;49msearch_term, cx\u001b[39m=\u001b[39;49mcse_id, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\u001b[39m.\u001b[39;49mexecute()\n\u001b[1;32m     10\u001b[0m \u001b[39mreturn\u001b[39;00m res[\u001b[39m'\u001b[39m\u001b[39mitems\u001b[39m\u001b[39m'\u001b[39m]\n",
+      "File \u001b[0;32m~/Documents/Wageningen University/Period 0 - GRS 70424 Internship/venv/lib/python3.9/site-packages/googleapiclient/_helpers.py:130\u001b[0m, in \u001b[0;36mpositional.<locals>.positional_decorator.<locals>.positional_wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    128\u001b[0m     \u001b[39melif\u001b[39;00m positional_parameters_enforcement \u001b[39m==\u001b[39m POSITIONAL_WARNING:\n\u001b[1;32m    129\u001b[0m         logger\u001b[39m.\u001b[39mwarning(message)\n\u001b[0;32m--> 130\u001b[0m \u001b[39mreturn\u001b[39;00m wrapped(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "File \u001b[0;32m~/Documents/Wageningen University/Period 0 - GRS 70424 Internship/venv/lib/python3.9/site-packages/googleapiclient/http.py:938\u001b[0m, in \u001b[0;36mHttpRequest.execute\u001b[0;34m(self, http, num_retries)\u001b[0m\n\u001b[1;32m    936\u001b[0m     callback(resp)\n\u001b[1;32m    937\u001b[0m \u001b[39mif\u001b[39;00m resp\u001b[39m.\u001b[39mstatus \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m \u001b[39m300\u001b[39m:\n\u001b[0;32m--> 938\u001b[0m     \u001b[39mraise\u001b[39;00m HttpError(resp, content, uri\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39muri)\n\u001b[1;32m    939\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpostproc(resp, content)\n",
+      "\u001b[0;31mHttpError\u001b[0m: <HttpError 429 when requesting https://customsearch.googleapis.com/customsearch/v1?q=Trichilia+trifolia+diagnosis&cx=13a87041f5a6df559&key=AIzaSyAiKMet5uvNWBKxmPC3OurJRs2amYdJaFA&alt=json returned \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\". Details: \"[{'message': \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\", 'domain': 'global', 'reason': 'rateLimitExceeded'}]\">"
+     ]
+    }
+   ],
+   "source": [
+    "for caribbean in tqdm(caribbean_species):\n",
+    "\n",
+    "    if caribbean in caribbean_done:\n",
+    "        print(caribbean, \"done\")\n",
+    "        continue\n",
+    "\n",
+    "    for query in queries:\n",
+    "        search_query = F\"{caribbean} {query}\"\n",
+    "\n",
+    "        # print(search_query)\n",
+    "\n",
+    "        # Search results (10 per search)\n",
+    "        search_results = google_search(search_query, api_key=api_key, cse_id=cse_id)\n",
+    "        # Google Urls\n",
+    "        caribbean_species_google[caribbean] = search_results\n",
+    "        # Just the links\n",
+    "        for result in search_results:\n",
+    "            caribbean_species_urls[caribbean].append(result['link'])\n",
+    "\n",
+    "\n",
+    "folder = \"../../../data/OpenAI/Urls/\"\n",
+    "\n",
+    "with open(F\"{folder}urls_caribbean.pkl\", 'wb') as f:\n",
+    "    pickle.dump(caribbean_species_urls, f)\n",
+    "\n",
+    "with open(F\"{folder}google_urls_caribbean.pkl\", 'wb') as f:\n",
+    "    pickle.dump(caribbean_species_google, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "3835f62c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "folder = \"../../../data/OpenAI/Urls/\"\n",
+    "\n",
+    "with open(F\"{folder}urls_caribbean.pkl\", 'wb') as f:\n",
+    "    pickle.dump(caribbean_species_urls, f)\n",
+    "\n",
+    "with open(F\"{folder}google_urls_caribbean.pkl\", 'wb') as f:\n",
+    "    pickle.dump(caribbean_species_google, f)"
+   ]
   }
  ],
  "metadata": {
