renaming and backup

--- a/notebooks/reports/OpenAI/1.0_urls_google.ipynb
+++ b/notebooks/reports/OpenAI/1.0_urls_google.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "67da1540",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "62218066",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "06d6ca39-dc5b-4e26-a3a3-459a9318b4a9",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "e45fa5e8-8bab-4d1b-9dfe-f1e2c6413038",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "2419e4aa",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "c7c4a968",
    "metadata": {},
    "outputs": [],
@@ -109,46 +109,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "a57025eb",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Ptychosperma halmaherense',\n",
-       " 'Geonoma brenesii',\n",
-       " 'Geonoma deneversii',\n",
-       " 'Acanthophoenix crinita',\n",
-       " 'Acanthophoenix rousselii',\n",
-       " 'Acanthophoenix rubra',\n",
-       " 'Acoelorrhaphe wrightii',\n",
-       " 'Acrocomia aculeata',\n",
-       " 'Acrocomia crispa',\n",
-       " 'Acrocomia emensis',\n",
-       " 'Acrocomia glaucescens',\n",
-       " 'Acrocomia hassleri',\n",
-       " 'Acrocomia intumescens',\n",
-       " 'Acrocomia media',\n",
-       " 'Acrocomia totai',\n",
-       " 'Actinokentia divaricata',\n",
-       " 'Actinokentia huerlimannii',\n",
-       " 'Actinorhytis calapparia',\n",
-       " 'Adonidia maturbongsii',\n",
-       " 'Adonidia merrillii',\n",
-       " 'Aiphanes acanthophylla',\n",
-       " 'Aiphanes acaulis',\n",
-       " 'Aiphanes bicornis',\n",
-       " 'Aiphanes buenaventurae',\n",
-       " 'Aiphanes chiribogensis',\n",
-       " 'Aiphanes deltoidea']"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "palms_done"
    ]
@@ -216,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "bd47a182",
    "metadata": {},
    "outputs": [],
@@ -227,7 +191,7 @@
     "\n",
     "try:\n",
     "    folder = \"../../../data/OpenAI/Urls/\"\n",
-    "    caribbeanm_species_google = pickle.load(open(F\"{folder}google_urls_caribbean.pkl\", 'rb'))\n",
+    "    caribbean_species_google = pickle.load(open(F\"{folder}google_urls_caribbean.pkl\", 'rb'))\n",
     "    caribbean_species_urls = pickle.load(open(F\"{folder}urls_caribbean.pkl\", 'rb'))\n",
     "    caribbean_done = list(caribbean_species_urls.keys())\n",
     "except:\n",
@@ -238,53 +202,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "94d9c572",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "caribbean_done"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "e623a880",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 62%|██████▏   | 26/42 [00:45<00:28,  1.77s/it]\n"
-     ]
-    },
-    {
-     "ename": "HttpError",
-     "evalue": "<HttpError 429 when requesting https://customsearch.googleapis.com/customsearch/v1?q=Trichilia+trifolia+diagnosis&cx=13a87041f5a6df559&key=AIzaSyAiKMet5uvNWBKxmPC3OurJRs2amYdJaFA&alt=json returned \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\". Details: \"[{'message': \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\", 'domain': 'global', 'reason': 'rateLimitExceeded'}]\">",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mHttpError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[15], line 13\u001b[0m\n\u001b[1;32m      8\u001b[0m search_query \u001b[39m=\u001b[39m \u001b[39mF\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mcaribbean\u001b[39m}\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m{\u001b[39;00mquery\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[1;32m     10\u001b[0m \u001b[39m# print(search_query)\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \n\u001b[1;32m     12\u001b[0m \u001b[39m# Search results (10 per search)\u001b[39;00m\n\u001b[0;32m---> 13\u001b[0m search_results \u001b[39m=\u001b[39m google_search(search_query, api_key\u001b[39m=\u001b[39;49mapi_key, cse_id\u001b[39m=\u001b[39;49mcse_id)\n\u001b[1;32m     14\u001b[0m \u001b[39m# Google Urls\u001b[39;00m\n\u001b[1;32m     15\u001b[0m caribbean_species_google[caribbean] \u001b[39m=\u001b[39m search_results\n",
-      "Cell \u001b[0;32mIn[3], line 9\u001b[0m, in \u001b[0;36mgoogle_search\u001b[0;34m(search_term, api_key, cse_id, **kwargs)\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39mCreates a search link for the custom Google search.\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m      8\u001b[0m service \u001b[39m=\u001b[39m build(\u001b[39m\"\u001b[39m\u001b[39mcustomsearch\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mv1\u001b[39m\u001b[39m\"\u001b[39m, developerKey\u001b[39m=\u001b[39mapi_key)\n\u001b[0;32m----> 9\u001b[0m res \u001b[39m=\u001b[39m service\u001b[39m.\u001b[39;49mcse()\u001b[39m.\u001b[39;49mlist(q\u001b[39m=\u001b[39;49msearch_term, cx\u001b[39m=\u001b[39;49mcse_id, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\u001b[39m.\u001b[39;49mexecute()\n\u001b[1;32m     10\u001b[0m \u001b[39mreturn\u001b[39;00m res[\u001b[39m'\u001b[39m\u001b[39mitems\u001b[39m\u001b[39m'\u001b[39m]\n",
-      "File \u001b[0;32m~/Documents/Wageningen University/Period 0 - GRS 70424 Internship/venv/lib/python3.9/site-packages/googleapiclient/_helpers.py:130\u001b[0m, in \u001b[0;36mpositional.<locals>.positional_decorator.<locals>.positional_wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    128\u001b[0m     \u001b[39melif\u001b[39;00m positional_parameters_enforcement \u001b[39m==\u001b[39m POSITIONAL_WARNING:\n\u001b[1;32m    129\u001b[0m         logger\u001b[39m.\u001b[39mwarning(message)\n\u001b[0;32m--> 130\u001b[0m \u001b[39mreturn\u001b[39;00m wrapped(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
-      "File \u001b[0;32m~/Documents/Wageningen University/Period 0 - GRS 70424 Internship/venv/lib/python3.9/site-packages/googleapiclient/http.py:938\u001b[0m, in \u001b[0;36mHttpRequest.execute\u001b[0;34m(self, http, num_retries)\u001b[0m\n\u001b[1;32m    936\u001b[0m     callback(resp)\n\u001b[1;32m    937\u001b[0m \u001b[39mif\u001b[39;00m resp\u001b[39m.\u001b[39mstatus \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m \u001b[39m300\u001b[39m:\n\u001b[0;32m--> 938\u001b[0m     \u001b[39mraise\u001b[39;00m HttpError(resp, content, uri\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39muri)\n\u001b[1;32m    939\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpostproc(resp, content)\n",
-      "\u001b[0;31mHttpError\u001b[0m: <HttpError 429 when requesting https://customsearch.googleapis.com/customsearch/v1?q=Trichilia+trifolia+diagnosis&cx=13a87041f5a6df559&key=AIzaSyAiKMet5uvNWBKxmPC3OurJRs2amYdJaFA&alt=json returned \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\". Details: \"[{'message': \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\", 'domain': 'global', 'reason': 'rateLimitExceeded'}]\">"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for caribbean in tqdm(caribbean_species):\n",
     "\n",
@@ -317,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "3835f62c",
    "metadata": {},
    "outputs": [],
@@ -329,6 +260,99 @@
     "\n",
     "with open(F\"{folder}google_urls_caribbean.pkl\", 'wb') as f:\n",
     "    pickle.dump(caribbean_species_google, f)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "4aa35c4f",
+   "metadata": {},
+   "source": [
+    "## PlantNet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71375753",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "folder = \"../../../data/OpenAI/Species/\"\n",
+    "\n",
+    "plantnet_species = pickle.load(open(F\"{folder}plantnet_species.pkl\", 'rb'))\n",
+    "\n",
+    "try:\n",
+    "    folder = \"../../../data/OpenAI/Urls/\"\n",
+    "    plantnet_species_google = pickle.load(open(F\"{folder}google_urls_plantnet.pkl\", 'rb'))\n",
+    "    plantnet_species_urls = pickle.load(open(F\"{folder}urls_plantnet.pkl\", 'rb'))\n",
+    "    plantnet_done = list(plantnet_species_urls.keys())\n",
+    "except:\n",
+    "    plantnet_species_urls = collections.defaultdict(list)\n",
+    "    plantnet_species_google = collections.defaultdict(list)\n",
+    "    plantnet_done = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a43f630c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plantnet_done"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2317deb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for plantnet in tqdm(plantnet_species):\n",
+    "\n",
+    "    if plantnet in plantnet_done:\n",
+    "        print(plantnet, \"done\")\n",
+    "        continue\n",
+    "\n",
+    "    for query in queries:\n",
+    "        search_query = F\"{plantnet} {query}\"\n",
+    "\n",
+    "        # print(search_query)\n",
+    "\n",
+    "        # Search results (10 per search)\n",
+    "        search_results = google_search(search_query, api_key=api_key, cse_id=cse_id)\n",
+    "        # Google Urls\n",
+    "        plantnet_species_google[plantnet] = search_results\n",
+    "        # Just the links\n",
+    "        for result in search_results:\n",
+    "            plantnet_species_urls[plantnet].append(result['link'])\n",
+    "\n",
+    "\n",
+    "folder = \"../../../data/OpenAI/Urls/\"\n",
+    "\n",
+    "with open(F\"{folder}urls_plantnet.pkl\", 'wb') as f:\n",
+    "    pickle.dump(plantnet_species_urls, f)\n",
+    "\n",
+    "with open(F\"{folder}google_urls_plantnet.pkl\", 'wb') as f:\n",
+    "    pickle.dump(plantnet_species_google, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e85ab2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "folder = \"../../../data/OpenAI/Urls/\"\n",
+    "\n",
+    "with open(F\"{folder}urls_plantnet.pkl\", 'wb') as f:\n",
+    "    pickle.dump(plantnet_species_urls, f)\n",
+    "\n",
+    "with open(F\"{folder}google_urls_plantnet.pkl\", 'wb') as f:\n",
+    "    pickle.dump(plantnet_species_google, f)"
    ]
   }
  ],
@@ -349,11 +373,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.13"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "020a6b5c0ed803a704c00010560cf50a059d086f11791eecdae2eedc39704b9e"
-   }
   }
  },
  "nbformat": 4,
